feat!: tachyon-api and abstract Json layer (#152)
- refactor!: narrow interaction context API
- refactor: move public classes to tachyon-api
- refactor!: Abstract public JSON API. Lesson learned from Java MCP SDK and others.
- refactor KotlinE2eTest